Fix: set vertical alignment of tiles to top
Set vertical-align to top so the tiles' position will not be off when text lengths are different.

--- a/css/style.css
+++ b/css/style.css
@@ -165,9 +165,10 @@ article .button:hover {
 
 .tile {
     display: inline-block;
+    vertical-align: top;
     width: 15rem;
     height: 15rem;
-    margin: 0.3rem 0.3rem;
+    margin: 0.3rem;
     padding: 1rem;
     border-radius: 1.5rem;
     font-size: 1.2rem;
@@ -206,6 +207,17 @@ footer div a:hover {
 
 /* a svg {
     display: block;
+} */
+
+/* @media (max-width: 500px) {
+    .tile {
+        width: 10rem;
+        height: 11.5rem;
+        margin: 0.1rem;
+        padding: 0.3rem;
+        border-radius: 0.8rem;
+        font-size: 1.0rem;
+    }
 } */
 
 @media (max-width: 1100px) {
